Keystone get_entities scenario backwards compat
This lets the user supply a service name to the Keystone get_entities
scenario in order to fetch a service other than 'keystone,' which
makes that scenario work for older OpenStack. The user can also supply
None, which will cause the scenario to create a new service, just like
it does for tenant, role, and user.

As a side-effect, this fixes the unit test for get_entities.

Change-Id: I3393c9bdbbab37b6d37c24b0bd7701c0dbbbfe75

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -44,6 +44,26 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        service_name: null
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        service_name: "nova"
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      sla:
+        failure_rate:
+          max: 0
 
   KeystoneBasic.add_and_remove_user_role:
     -
