Add ability to specify directory with murano package files
Currently we are able to specify murano package in the Murano context
by specifying murano package address. Now we add ability to specify
non-zipped murano package to Murano context.

Add function that helps to pack a directory with murano package files
into zipfile correctly.

Change-Id: Iba95025c10181109f402824e781afedcdd549b5e

--- a/rally-jobs/rally-murano.yaml
+++ b/rally-jobs/rally-murano.yaml
@@ -46,3 +46,21 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        packages_per_env: 2
+      runner:
+        type: "constant"
+        times: 8
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        murano_packages:
+          app_package: "/home/jenkins/.rally/extra/murano/applications/HelloReporter/io.murano.apps.HelloReporter/"
+        roles:
+          - "admin"
+      sla:
+        failure_rate:
+          max: 0
