--- a/rally-jobs/unstable-neutron.yaml
+++ b/rally-jobs/unstable-neutron.yaml
@@ -164,3 +164,22 @@
           failure_rate:
             max: 0
 
+  CeilometerResource.get_tenant_resources:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 5
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        ceilometer:
+          counter_name: "cpu_util"
+          counter_type: "gauge"
+          counter_volume: 1.0
+          counter_unit: "instance"
+          resources_per_tenant: 3
+      sla:
+        failure_rate:
+          max: 0
