Keystone: do not allow specifying service names
This fixes service cleanup. Keystone resources are only cleaned up if
they have the correct magic prefix, but services were not reliably
created with that prefix.

This also adds some logging that made it easier to discover this
issue, and fixes a few minor typos.

Closes-Bug: #1474322
Change-Id: Ic58271bbc9a84feff4f60229a66e0ca00834a79c

--- a/samples/tasks/scenarios/keystone/create-and-delete-service.yaml
+++ b/samples/tasks/scenarios/keystone/create-and-delete-service.yaml
@@ -2,8 +2,7 @@
   KeystoneBasic.create_and_delete_service:
     -
       args:
-        name: "Rally_test_service"
-        service_type: "Really_test_type"
+        service_type: "Rally_test_type"
         description: "test_description"
       runner:
         type: "constant"
