Add new Murano scenarios
- added four new Murano scenarios which check performance of
commands which work with packages, like 'import-package', 'list-packages',
'delete-package'.
- added appropriate methods into the murano/utils.py
- added unit tests

Change-Id: I655bb0c8a0980c59cd4ab576f97ee94c2c3cd0f7

--- a/rally-jobs/extra/murano/applications/HelloReporter/io.murano.apps.HelloReporter/manifest.yaml
+++ b/rally-jobs/extra/murano/applications/HelloReporter/io.murano.apps.HelloReporter/manifest.yaml
@@ -5,6 +5,6 @@ Name: HelloReporter
 Description: |
  HelloReporter test app.
 Author: 'Mirantis, Inc'
-Tags: [App, Test, HelloWorld]
+Tags: []
 Classes:
  io.murano.apps.HelloReporter: HelloReporter.yaml
