Adds LBaaS context, verify network extension
1) Add rally/plugins/openstack/context/neutron for neutron
   related contexts
2) Context to create LBaaS-v1 resources
3) Add check in network wrapper to verify if a Network extension
is supported in the deployment.

Change-Id: I7b4defe187c0631928d70bd09d7bcea956f4eed3

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -106,6 +106,9 @@
           tenants: 1
           users_per_tenant: 1
         network: {}
+        lbaas:
+          pool: {}
+          lbaas_version: 1
         quotas:
           neutron:
             network: -1
