Add Neutron LoadBalancer v1 create and list vips
Enable benchmarking of the Neutron LoadBalancer v1
lb-vip-create and lb-vip-list APIs. Due to the
different API scheme and confusing naming conventions
in Neutron (LB is v1 API and LBaaS for v2 API) the
appropriate code is explicitly marked with 'v1'
since this only implements the API v1 benchmarking.

Change-Id: I8a4f85bb62ae2a44be0a25d9a8327fd1ee48336b

--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -163,6 +163,29 @@
         failure_rate:
           max: 0
 
+  NeutronLoadbalancerV1.create_and_list_vips:
+    -
+      args:
+        vip_create_args: {}
+      runner:
+        type: "constant"
+        times: 20
+        concurrency: 10
+      context:
+        users:
+          tenants: 5
+          users_per_tenant: 4
+        network: {}
+        quotas:
+          neutron:
+            network: -1
+            subnet: -1
+            pool: -1
+            vip: -1
+      sla:
+        failure_rate:
+          max: 0
+
   NeutronNetworks.create_and_update_networks:
     -
       args:
