Add Cinder create_and_list_volume_backups scenario
Implement create and list volume backups scenario for Cinder.
This scenario covers cinder "backup-create" and "backup-list".

Change-Id: Ia8a8ee0a6e5b85ec3151301054d4528bd7daa0f4

--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -410,3 +410,41 @@
       sla:
         failure_rate:
           max: 0
+
+  CinderVolumes.create_and_list_volume_backups:
+    -
+      args:
+        size: 1
+        detailed: True
+        do_delete: True
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        roles:
+          - "Member"
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        size: 1
+        detailed: True
+        do_delete: False
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+        roles:
+          - "Member"
+      sla:
+        failure_rate:
+          max: 0
