--- a/rally-jobs/rally-mos_neutron.yaml
+++ b/rally-jobs/rally-mos_neutron.yaml
@@ -308,3 +308,21 @@
       sla:
         failure_rate:
           max: 0
+
+  CinderVolumes.create_and_list_volume_backups:
+    -
+      args:
+        size: 1
+        detailed: True
+        do_delete: True
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 1
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
