Refactoring cinder create_volume_backup scenario
It improves code readability and gets cinder volume backups scenarios
standardized.

Change-Id: I910876a74231b661cdaa69fa2e76bcf2fc7f8fe8

--- a/samples/tasks/scenarios/cinder/create-and-list-volume-backups.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-list-volume-backups.yaml
@@ -5,6 +5,8 @@
         size: 1
         detailed: True
         do_delete: True
+        create_volume_kwargs: {}
+        create_backup_kwargs: {}
       runner:
         type: "constant"
         times: 2
