--- a/samples/tasks/scenarios/cinder/create-and-restore-volume-backup.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-restore-volume-backup.yaml
@@ -4,6 +4,8 @@
       args:
         size: 1
         do_delete: True
+        create_volume_kwargs: {}
+        create_backup_kwargs: {}
       runner:
         type: "constant"
         times: 2
