Fixes Typos in rally files
This submission fixes typos in the following files :
1. ./tests/unit/plugins/openstack/scenarios/neutron/test_network.py
2. ./tests/unit/task/processing/test_utils.py
3. ./tests/unit/verification/test_config.py
4. ./etc/rally/rally.conf.sample

Change-Id: I195fbdeef9140fd6f30e419692ca812337f74765

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -106,7 +106,7 @@
 # Its value may be silently ignored in the future.
 #https_insecure = false
 
-# Path to CA server cetrificate for SSL (string value)
+# Path to CA server certificate for SSL (string value)
 # This option is deprecated for removal.
 # Its value may be silently ignored in the future.
 #https_cacert = <None>
