Add create_and_update_secgroups scenario
Add scenario that creates N security groups and then updates their
name and description.Also added  supporting method '_update_security_groups'
to "rally/plugins/openstack/scenarios/nova/utils.py".

Change-Id: Ieff30655cc04e66a85bb6dfd7c3f90f59ac14384

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -484,6 +484,25 @@
         failure_rate:
           max: 0
 
+  NovaSecGroup.create_and_update_secgroups:
+    -
+      args:
+        security_group_count: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 4
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+        quotas:
+          nova:
+            security_groups: -1
+      sla:
+        failure_rate:
+          max: 0
+
   NovaSecGroup.create_and_list_secgroups:
     -
       args:
