Use config file for genconfig and update sample config
Change-Id: I5df1bf120853e3d314b989f928bb6e1b5c11a266

--- a/tox.ini
+++ b/tox.ini
@@ -48,10 +48,7 @@ commands = make html
 
 [testenv:genconfig]
 commands =
-    oslo-config-generator --output-file etc/rally/rally.conf.sample \
-    --namespace rally \
-    --namespace oslo.db \
-    --namespace oslo.log
+    oslo-config-generator --config-file etc/rally/rally-config-generator.conf
 
 [tox:jenkins]
 downloadcache = ~/cache/pip
