--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -5,12 +5,14 @@
 #
 
 # Print debugging output (set logging level to DEBUG instead of
-# default WARNING level). (boolean value)
+# default INFO level). (boolean value)
 #debug = false
 
-# Print more verbose output (set logging level to INFO instead of
-# default WARNING level). (boolean value)
-#verbose = false
+# If set to false, will disable INFO logging level, making WARNING the
+# default. (boolean value)
+# This option is deprecated for removal.
+# Its value may be silently ignored in the future.
+#verbose = true
 
 # The name of a logging configuration file. This file is appended to
 # any existing logging configuration files. For details about logging
@@ -39,14 +41,16 @@
 # Deprecated group/name - [DEFAULT]/logdir
 #log_dir = <None>
 
-# Use syslog for logging. Existing syslog format is DEPRECATED during
-# I, and will change in J to honor RFC5424. (boolean value)
+# Use syslog for logging. Existing syslog format is DEPRECATED and
+# will be changed later to honor RFC5424. (boolean value)
 #use_syslog = false
 
 # (Optional) Enables or disables syslog rfc5424 format for logging. If
 # enabled, prefixes the MSG part of the syslog message with APP-NAME
 # (RFC5424). The format without the APP-NAME is deprecated in K, and
-# will be removed in L, along with this option. (boolean value)
+# will be removed in M, along with this option. (boolean value)
+# This option is deprecated for removal.
+# Its value may be silently ignored in the future.
 #use_syslog_rfc_format = true
 
 # Syslog facility to receive log lines. (string value)
@@ -67,16 +71,13 @@
 
 # Prefix each line of exception output with this format. (string
 # value)
-#logging_exception_prefix = %(asctime)s.%(msecs)03d %(process)d TRACE %(name)s %(instance)s
+#logging_exception_prefix = %(asctime)s.%(msecs)03d %(process)d ERROR %(name)s %(instance)s
 
 # List of logger=LEVEL pairs. (list value)
-#default_log_levels = amqp=WARN,amqplib=WARN,boto=WARN,qpid=WARN,sqlalchemy=WARN,suds=INFO,oslo.messaging=INFO,iso8601=WARN,requests.packages.urllib3.connectionpool=WARN,urllib3.connectionpool=WARN,websocket=WARN,requests.packages.urllib3.util.retry=WARN,urllib3.util.retry=WARN,keystonemiddleware=WARN,routes.middleware=WARN,stevedore=WARN
+#default_log_levels = amqp=WARN,amqplib=WARN,boto=WARN,qpid=WARN,sqlalchemy=WARN,suds=INFO,oslo.messaging=INFO,iso8601=WARN,requests.packages.urllib3.connectionpool=WARN,urllib3.connectionpool=WARN,websocket=WARN,requests.packages.urllib3.util.retry=WARN,urllib3.util.retry=WARN,keystonemiddleware=WARN,routes.middleware=WARN,stevedore=WARN,taskflow=WARN
 
 # Enables or disables publication of error events. (boolean value)
 #publish_errors = false
-
-# Enables or disables fatal status of deprecations. (boolean value)
-#fatal_deprecations = false
 
 # The format for an instance that is passed with the log message.
 # (string value)
@@ -85,6 +86,9 @@
 # The format for an instance UUID that is passed with the log message.
 # (string value)
 #instance_uuid_format = "[instance: %(uuid)s] "
+
+# Enables or disables fatal status of deprecations. (boolean value)
+#fatal_deprecations = false
 
 #
 # From rally
@@ -207,24 +211,28 @@
 # (floating point value)
 #heat_stack_resume_poll_interval = 1.0
 
-# Time(in sec) to wait for stack snapshot to be created.
+# Time(in sec) to wait for stack snapshot to be created. (floating
+# point value)
 #heat_stack_snapshot_timeout = 3600.0
 
 # Time interval(in sec) between checks when waiting for stack snapshot
-# to be created.
+# to be created. (floating point value)
 #heat_stack_snapshot_poll_interval = 1.0
 
 # Time(in sec) to wait for stack to be restored from snapshot.
+# (floating point value)
 #heat_stack_restore_timeout = 3600.0
 
-# Time interval(in sec) between checks when waiting for stack to be restored.
+# Time interval(in sec) between checks when waiting for stack to be
+# restored. (floating point value)
 #heat_stack_restore_poll_interval = 1.0
 
-# Time (in sec) to wait for stack to scale up or down. (floating point value)
+# Time (in sec) to wait for stack to scale up or down. (floating point
+# value)
 #heat_stack_scale_timeout = 3600.0
 
 # Time interval (in sec) between checks when waiting for a stack to
-# scale up or down.  (floating point value)
+# scale up or down. (floating point value)
 #heat_stack_scale_poll_interval = 1.0
 
 # Delay between creating Manila share and polling for its status.
@@ -485,12 +493,6 @@
 
 # Server boot poll interval (floating point value)
 #ec2_server_boot_poll_interval = 1.0
-
-# Interval between checks when waiting for a VM to become pingable
-#vm_ping_poll_interval = 1.0
-
-# Time to wait for a VM to become pingable
-#vm_ping_timeout = 120.0
 
 
 [database]
