Use network context for Neutron scenarios
This permits users to create a network with the network context, or
use the new exiting_network context, to provide networks to Neutron
scenarios instead of always creating a new network. This makes it
possible to run Rally against Neutron Provider Network deployments
with "dumb" routers. It will also eventually permit us to deduplicate
some code by moving network creation into the network context.

Neutron scenarios that are benchmarking network creation continue to
create networks.

This deprecates network creation inside the other scenarios. Warning
messages are produced where appropriate.

Change-Id: I404eee0f14f40e348b2916854ed193c59364c31b

--- a/samples/tasks/scenarios/neutron/create_and_list_routers.yaml
+++ b/samples/tasks/scenarios/neutron/create_and_list_routers.yaml
@@ -12,6 +12,7 @@
         times: 100
         concurrency: 10
       context:
+        network: {}
         users:
           tenants: 3
           users_per_tenant: 3
