--- a/samples/tasks/scenarios/neutron/create_and_update_subnets.yaml
+++ b/samples/tasks/scenarios/neutron/create_and_update_subnets.yaml
@@ -14,6 +14,7 @@
         times: 10
         concurrency: 5
       context:
+        network: {}
         users:
           tenants: 2
           users_per_tenant: 3
