--- a/samples/tasks/scenarios/neutron/create_and_list_subnets.yaml
+++ b/samples/tasks/scenarios/neutron/create_and_list_subnets.yaml
@@ -11,6 +11,7 @@
         times: 10
         concurrency: 5
       context:
+        network: {}
         users:
           tenants: 2
           users_per_tenant: 3
