--- a/samples/tasks/scenarios/neutron/create_and_update_routers.yaml
+++ b/samples/tasks/scenarios/neutron/create_and_update_routers.yaml
@@ -15,6 +15,7 @@
         times: 10
         concurrency: 5
       context:
+        network: {}
         users:
           tenants: 2
           users_per_tenant: 3
