Set samples default flavor to m1.tiny
Summary:
Samples should use m1.tiny instead of m1.nano
Samples should be parametrized and use m1.tiny instead of m1.nano as default flavor.

Change-Id: Ie820c573c0a9971a54f7ab20a7454a2f05dc88d2
Closes-Bug: #1431700

--- a/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
@@ -1,3 +1,4 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   CinderVolumes.create_and_attach_volume:
     -
@@ -6,7 +7,7 @@
           image:
             name: "^cirros.*uec$"
           flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
       runner:
         type: "constant"
         times: 5
@@ -21,7 +22,7 @@
           min: 1
           max: 5
         flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
       runner:
