--- a/samples/tasks/scenarios/nova/boot-and-rebuild.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-rebuild.yaml
@@ -1,8 +1,9 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
 NovaServers.boot_and_rebuild_server:
 - args:
     flavor:
-      name: "m1.tiny"
+      name: "{{flavor_name}}"
     from_image:
       name: "^cirros.*uec$"
     to_image:
