--- a/samples/tasks/scenarios/cinder/create-snapshot-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-snapshot-and-attach-volume.yaml
@@ -1,3 +1,4 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   CinderVolumes.create_snapshot_and_attach_volume:
     -
@@ -18,7 +19,7 @@
           image:
             name: "^cirros.*uec$"
           flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
           servers_per_tenant: 2
     -
       args:
@@ -38,6 +39,6 @@
           image:
             name: "^cirros.*uec$"
           flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
           servers_per_tenant: 2
 
