--- a/samples/tasks/scenarios/ec2/boot.yaml
+++ b/samples/tasks/scenarios/ec2/boot.yaml
@@ -1,9 +1,10 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   EC2Servers.boot_server:
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
       runner:
