--- a/samples/tasks/scenarios/nova/boot-and-delete.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-delete.yaml
@@ -1,9 +1,10 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   NovaServers.boot_and_delete_server:
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
         force_delete: false
