--- a/samples/tasks/scenarios/nova/boot-and-live-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-live-migrate.yaml
@@ -1,8 +1,9 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
 NovaServers.boot_and_live_migrate_server:
 - args:
     flavor:
-      name: m1.tiny
+      name: "{{flavor_name}}"
     image:
       name: "^cirros.*uec$"
     block_migration: false
