--- a/samples/tasks/scenarios/nova/boot-from-volume.yaml
+++ b/samples/tasks/scenarios/nova/boot-from-volume.yaml
@@ -1,9 +1,10 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   NovaServers.boot_server_from_volume:
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
         volume_size: 10
