--- a/samples/tasks/scenarios/nova/resize-server.yaml
+++ b/samples/tasks/scenarios/nova/resize-server.yaml
@@ -1,9 +1,10 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   NovaServers.resize_server:
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
         to_flavor:
