--- a/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
+++ b/samples/tasks/scenarios/vm/boot-runcommand-delete.yaml
@@ -1,9 +1,10 @@
+{% set flavor_name = flavor_name or "m1.tiny" %}
 ---
   VMTasks.boot_runcommand_delete:
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
         floating_network: "public"
