Expand script path by os.path.expanduser
Make if possible to use tilda in script path

Change-Id: I1dcf32505c86302ebdde41aa2d869665b50f0954

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -656,7 +656,7 @@
             size: 2
         use_floatingip: true
         command:
-          script_file: "/home/jenkins/.rally/extra/instance_dd_test.sh"
+          script_file: "~/.rally/extra/instance_dd_test.sh"
           interpreter: "/bin/sh"
         username: "cirros"
       runner:
@@ -679,7 +679,7 @@
           name: {{image_name}}
         use_floatingip: false
         command:
-          script_file: "/home/jenkins/.rally/extra/instance_dd_test.sh"
+          script_file: "~/.rally/extra/instance_dd_test.sh"
           interpreter: "/bin/sh"
         username: "cirros"
       runner:
