--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -463,7 +463,7 @@
         image:
             name: {{image_name}}
         command:
-          script_file: "/home/jenkins/.rally/extra/instance_dd_test.sh"
+          script_file: "~/.rally/extra/instance_dd_test.sh"
           interpreter: "/bin/sh"
         username: "cirros"
       runner:
