--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -495,6 +495,16 @@
 #ec2_server_boot_poll_interval = 1.0
 
 
+[cleanup]
+
+#
+# From rally
+#
+
+# A timeout in seconds for deleting resources (integer value)
+#resource_deletion_timeout = 600
+
+
 [database]
 
 #
