--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -324,6 +324,75 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_and_attach_volume:
+    -
+      args:
+        size: 1
+        image:
+          name: {{image_name}}
+        flavor:
+          name: "m1.tiny"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  CinderVolumes.create_snapshot_and_attach_volume:
+    -
+      args:
+        volume_type: false
+        size:
+          min: 1
+          max: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        servers:
+          image:
+            name: {{image_name}}
+          flavor:
+            name: "m1.tiny"
+          servers_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
+    -
+      args:
+        volume_type: true
+        size:
+          min: 1
+          max: 1
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        servers:
+          image:
+            name: {{image_name}}
+          flavor:
+            name: "m1.tiny"
+          servers_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_delete_snapshot:
     -
       args:
