Fixes variables in Tempest generated config file
The tempest configuration file generated by Rally when creating a
deployment is being created with multiple errors. Some config
values are being generated in the incorrect section and a few other
values are being created wih an incorrect name. Also a few values
and sections were removed from Tempest config file but are still
added to the config file generated by Rally.

Change-Id: I2731323e22abd6ef439f44ce0dfa427d1ee5c934
Closes-Bug: 1489636

--- a/rally/verification/tempest/config.ini
+++ b/rally/verification/tempest/config.ini
@@ -3,48 +3,49 @@ debug = True
 log_file = tempest.log
 use_stderr = False
 
+[auth]
+allow_tenant_isolation = False
+
 [boto]
-ssh_user = cirros
 instance_type = m1.nano
 http_socket_timeout = 30
 build_interval = 1
 build_timeout = 196
 
-[cli]
-cli_dir = /usr/local/bin
-
 [compute]
 ssh_connect_method = floating
-use_block_migration_for_live_migration = False
-live_migration_available = False
-image_alt_ssh_user = cirros
 image_ssh_user = cirros
-ssh_timeout = 196
-ip_version_for_ssh = 4
+image_alt_ssh_user = cirros
 network_for_ssh = private
 ssh_user = cirros
-allow_tenant_isolation = False
-change_password_available = False
 build_interval = 1
 build_timeout = 196
 
-[compute-admin]
+[compute-feature-enabled]
+change_password = False
+live_migration = False
+block_migration_for_live_migration = False
 
 [identity]
 
 [network]
-default_network = 10.0.0.0/24
-tenant_networks_reachable = false
-api_version = 2.0
+tenant_networks_reachable = False
 
 [network-feature-enabled]
 api_extensions = all
 ipv6 = True
 
+[oslo_concurrency]
+
 [scenario]
 large_ops_number = 0
+ssh_user = cirros
 
 [service_available]
+
+[validation]
+ssh_timeout = 196
+ip_version_for_ssh = 4
 
 [volume]
 build_interval = 1
