--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -604,6 +604,35 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        sleep: 0.01
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        quotas:
+          nova:
+            instances: 200
+            cores: 200
+            ram: -1
+            floating_ips: 200
+            fixed_ips: 200
+            metadata_items: -1
+            injected_files: -1
+            injected_file_content_bytes: -1
+            injected_file_path_bytes: -1
+            key_pairs: 500
+            security_groups: 400
+            security_group_rules: 600
+          cinder:
+            gigabytes: -1
+            snapshots: -1
+            volumes: -1
+      sla:
+        failure_rate:
+          max: 0
 
   Dummy.dummy_exception:
     -
