--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -465,6 +465,22 @@
         failure_rate:
           max: 0
 
+  NovaImages.list_images:
+    -
+      args:
+        detailed: True
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaSecGroup.create_and_delete_secgroups:
     -
       args:
