Auto assign nic for servers context
Servers context now uses nova scenarios's _boot_servers. Enable
auto_assign_nic in servers context could avoid "Multiple possible
networks found" error from Nova.

Change-Id: I15a4f1595344331971078cb1e4f17162e764ac8e
Closes-Bug: #1477583

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -279,6 +279,8 @@
           image:
               name: {{image_name}}
           servers_per_tenant: 2
+        network:
+          networks_per_tenant: 2
       sla:
         failure_rate:
           max: 0
