Certification task: neutron checks
Add neutron test cases to certification task

Co-Authored-By: Yaroslav Isakov <yisakov@mirantis.com>
Co-Authored-By: Julia Varigina <jvarigina@mirantis.com>

Change-Id: I713eb24b250927e6ad1f1fa13c93c6b2f4e48110

--- a/certification/openstack/task.yaml
+++ b/certification/openstack/task.yaml
@@ -2,7 +2,7 @@
 {%- set image_name = image_name|default("^(cirros.*uec|TestVM)$") %}
 {%- set flavor_name = flavor_name|default("m1.tiny") %}
 {%- set use_existing_users = use_existing_users|default(false) %}
-{%- set service_list = service_list|default(["authentication", "cinder", "keystone", "nova", "glance"]) %}
+{%- set service_list = service_list|default(["authentication", "cinder", "keystone", "nova", "glance", "neutron"]) %}
 {%- set smoke = smoke|default(true) %}
 {%- set controllers_amount = controllers_amount|default(1) %}
 {%- if smoke %}
@@ -20,15 +20,23 @@
 {% if "authentication" in service_list %}
 {%- include "scenario/authentication.yaml"-%}
 {% endif %}
+
 {% if "cinder" in service_list %}
 {%- include "scenario/cinder.yaml"-%}
 {% endif %}
+
 {% if "keystone" in service_list %}
 {%- include "scenario/keystone.yaml"-%}
 {% endif %}
+
 {% if "nova" in service_list %}
 {%- include "scenario/nova.yaml"-%}
 {% endif %}
+
 {% if "glance" in service_list %}
 {%- include "scenario/glance.yaml"-%}
+{% endif %}
+
+{% if "neutron" in service_list %}
+{%- include "scenario/neutron.yaml"-%}
 {% endif %}
