--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -44,6 +44,26 @@
         failure_rate:
           max: 20
 
+  NeutronNetworks.create_and_list_floating_ips:
+    -
+      args:
+        floating_network: "public"
+        floating_ip_args: {}
+      runner:
+        type: "constant"
+        times: {{smoke or 40}}
+        concurrency: {{smoke or 20}}
+      context:
+        users:
+          tenants: {{smoke or 5}}
+          users_per_tenant: {{smoke or 2}}
+        quotas:
+          neutron:
+             floatingip: -1
+      sla:
+        failure_rate:
+          max: 0
+
   NeutronNetworks.create_and_list_routers:
     -
       args:
@@ -382,6 +402,26 @@
       sla:
         failure_rate:
           max: 20
+
+  NeutronNetworks.create_and_delete_floating_ips:
+    -
+      args:
+        floating_network: "public"
+        floating_ip_args: {}
+      runner:
+        type: "constant"
+        times: {{smoke or 40}}
+        concurrency: {{smoke or 20}}
+      context:
+        users:
+          tenants: {{smoke or 5}}
+          users_per_tenant: {{smoke or 2}}
+        quotas:
+          neutron:
+             floatingip: -1
+      sla:
+        failure_rate:
+          max: 0
 
   NeutronNetworks.create_and_delete_routers:
     -
