--- a/certification/openstack/task.yaml
+++ b/certification/openstack/task.yaml
@@ -1,7 +1,7 @@
 {%- set image_name = image_name|default("^(cirros.*uec|TestVM)$") %}
 {%- set flavor_name = flavor_name|default("m1.tiny") %}
 {%- set use_existing_users = use_existing_users|default(false) %}
-{%- set service_list = service_list|default(["authentication", "cinder", "keystone"]) %}
+{%- set service_list = service_list|default(["authentication", "cinder", "keystone", "nova"]) %}
 {%- macro user_context(tenants=1,users_per_tenant=1) -%}
 {%- if use_existing_users and caller is not defined -%} {}
 {%- else %}
@@ -47,6 +47,24 @@
         volumes:
           size: {{ size }}
           volumes_per_tenant: {{ volumes_per_tenant }}
+{%- endmacro %}
+{%- macro unlimited_nova(keypairs=false) %}
+          nova:
+            cores: -1
+            floating_ips: -1
+            instances: -1
+            {%- if keypairs %}
+            key_pairs: -1
+            {%- endif %}
+            ram: -1
+            security_group_rules: -1
+            security_groups: -1
+{%- endmacro %}
+{%- macro unlimited_neutron() %}
+          neutron:
+            network: -1
+            port: -1
+            subnet: -1
 {%- endmacro %}
 ---
 {% if "authentication" in service_list %}
@@ -306,6 +324,192 @@
         name_length: 10
       context:
         {{ user_context() }}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+{% endif %}
+{% if "nova" in service_list %}
+  NovaKeypair.boot_and_delete_server_with_keypair:
+    -
+      args:
+        {{ vm_params(image_name, flavor_name) }}
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova(keypairs=true) }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaKeypair.create_and_delete_keypair:
+    -
+      context:
+        {% call user_context() %}
+        quotas:
+          {{ unlimited_nova(keypairs=true) }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaKeypair.create_and_list_keypairs:
+    -
+      context:
+        {% call user_context() %}
+        quotas:
+          {{ unlimited_nova(keypairs=true) }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.boot_and_bounce_server:
+    -
+      args:
+        actions:
+          -
+            hard_reboot: 1
+          -
+            soft_reboot: 1
+          -
+            stop_start: 1
+          -
+            rescue_unrescue: 1
+        {{ vm_params(image_name, flavor_name) }}
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.boot_and_delete_server:
+    -
+      args:
+        {{ vm_params(image_name, flavor_name) }}
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.boot_and_list_server:
+    -
+      args:
+        detailed: true
+        {{ vm_params(image_name, flavor_name) }}
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.boot_and_rebuild_server:
+    -
+      args:
+        {{ vm_params(flavor=flavor_name) }}
+        from_image:
+          name: {{ image_name }}
+        to_image:
+          name: {{ image_name }}
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.boot_server_from_volume_and_delete:
+    -
+      args:
+        {{ vm_params(image_name, flavor_name) }}
+        volume_size: 5
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_volumes() }}
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.pause_and_unpause_server:
+    -
+      args:
+        {{ vm_params(image_name, flavor_name) }}
+        force_delete: false
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  NovaServers.snapshot_server:
+    -
+      args:
+        {{ vm_params(image_name, flavor_name) }}
+      context:
+        {% call user_context() %}
+        network:
+          networks_per_tenant: 1
+          start_cidr: "100.1.0.0/25"
+        quotas:
+          {{ unlimited_neutron() }}
+          {{ unlimited_nova() }}
+        {% endcall %}
       runner:
         {{ runner() }}
       sla:
