Certification task: quota scenarios for cinder, nova
Change-Id: Iaf81d3463e8466a0d3e613c88c642a3de19e9e8b

--- a/certification/openstack/task.yaml
+++ b/certification/openstack/task.yaml
@@ -260,6 +260,17 @@
         {{ runner() }}
       sla:
         {{ no_failures_sla() }}
+
+  Quotas.cinder_update_and_delete:
+    -
+      args:
+        max_quota: 1024
+      context:
+        {{ user_context() }}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
 {% endif %}
 {% if "keystone" in service_list %}
   KeystoneBasic.add_and_remove_user_role:
@@ -510,6 +521,17 @@
           {{ unlimited_neutron() }}
           {{ unlimited_nova() }}
         {% endcall %}
+      runner:
+        {{ runner() }}
+      sla:
+        {{ no_failures_sla() }}
+
+  Quotas.nova_update_and_delete:
+    -
+      args:
+        max_quota: 1024
+      context:
+        {{ user_context() }}
       runner:
         {{ runner() }}
       sla:
